# ESP32_DeVICE_Module

./: CMakeLists.txt  ESP32_Control_Module.c  ESP32_DeVICE_Attribute.c  ESP32_DeVICE_Define.c  ESP32_DeVICE_Get.c  ESP32_DeVICE_Initialize.c  ESP32_DeVICE_Module.c  ESP32_DeVICE_Notify.c  ESP32_DeVICE_Rename.c  ESP32_DeVICE_Set.c  ESP32_DeVICE_Shutdown.c  ESP32_DeVICE_State.c  ESP32_DeVICE_Undefine.c  ESP32_DeVICE_Webif_Get_Cb.c  ESP32_DeVICE_Webif_Jso_Cb.c  ESP32_DeVICE_Webif_Set_Cb.c  ESP32_DeVICE_readings.c  ESP32_SCDE_WEBIF_get_cb.c  HTools_cgi.c  README.md  ServAPCfg_tpl.c  component.mk
BACKUP control module/: ESP32_DeVICE_Module.c  README.md
BACKUP control module/include/: ESP32_Control_Module.h
backup2/: ESP32_DeVICE_Module.c
include/: ESP32_Control_Module.h  ESP32_DeVICE_Attribute.h  ESP32_DeVICE_Define.h  ESP32_DeVICE_Get.h  ESP32_DeVICE_Initialize.h  ESP32_DeVICE_Module.h  ESP32_DeVICE_Notify.h  ESP32_DeVICE_Rename.h  ESP32_DeVICE_Set.h  ESP32_DeVICE_Shutdown.h  ESP32_DeVICE_State.h  ESP32_DeVICE_Undefine.h  ESP32_DeVICE_Webif_Get_Cb.h  ESP32_DeVICE_Webif_Jso_Cb.h  ESP32_DeVICE_Webif_Set_Cb.h  ESP32_DeVICE_readings.h  ESP32_SCDE_WEBIF_get_cb.h  HTools_cgi.h  ServAPCfg_tpl.h
