idf_component_register(SRCS "ESP32_DeVICE_Module.c"
"ESP32_DeVICE_Module.c"
"ESP32_SCDE_WEBIF_get_cb.c"
"HTools_cgi.c"
   
                    INCLUDE_DIRS "include" 
                    "../../main/include"
                    "../WebIf_Module/include"
                    "../WebIf_Content/include")
